--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </button>
             <div class="navbar-collapse collapse">
               <ul class="nav nav-pills">
-                <li role="presentation" "active"><a href="#about" class="page-scroll">About</a></li>
+                <li role="presentation"><a href="#about" class="page-scroll">About</a></li>
                 <li role="presentation"><a href="#projects" class="page-scroll">Projects</a></li>
                 <li role="presentation"><a href="#contact" class="page-scroll">Contact</a></li>
               </ul>
