--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <h1>Contact</h1>
       <h2>Thanks for stopping by!</h2>
       <p>If you are interested in my designs or want to see more projects, then do not hesitate to get in touch!</p>
-      <a href="mailto:youremailaddress" class="btn btn-contact btn-lg">Contact Me</a>
+      <a href="mailto:jenny@jennycore.com" class="btn btn-contact btn-lg">Contact Me</a>
     </div>
   </body>
   </html>
