--- a/case_studies/riverside-art-center.html
+++ b/case_studies/riverside-art-center.html
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="col-xs-12 col-md-3 col-lg-3">
-            <div class="wireframe-img">
+            <div class="wireframe-img last-img">
               <img src="/img/wireframe4.png" div class="img-responsive" alt="wireframe"/>
             </div>
           </div>
