--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <a href="/diamond_pattern/diamond_pattern.html">
           <img src="/img/diamond-pattern.png" class="img-responsive" alt="diamond pattern"/>
         </a>
-        <a href="/solar_system/solar_system.html">
+        <!-- <a href="/solar_system/solar_system.html">
           <img src="/img/animation.png" class="img-responsive" alt="solar system animation"/>
-        </a>
+        </a> -->
         <a href="/tea_pattern/tea_pattern.html">
           <img src="/img/tea-pattern.png" class="img-responsive" alt="tea pattern"/>
         </a>
