About section correction
'html' typo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h3>About Me</h3>
         <p>I am a British Web Designer based in Berlin (DE). I work in UX, UI and product design and I'm interested in front end development. I love drawing and practice as an artist, you can check out my creations <a href="http://www.jennycore.com/"><b>here</b></a>. I’m also an avid tea drinker.</p>
         <ul class="flex-list list-inline">
-          <li>HMTL</li>
+          <li>HTML</li>
           <li>CSS</li>
           <li>Sass</li>
           <li>JavaScript</li>
