--- a/case_studies/riverside-art-center.html
+++ b/case_studies/riverside-art-center.html
@@ -37,7 +37,9 @@
             <p>As I have worked in the creative industry for 7 years, redesigning a gallery website seemed fitting. Due to many cuts in the arts over the past decade, it has been no suprise that this has taken a hit in the promotion and marketing of independant and public art spaces. Since the arts are underrepresented, I wanted to focus on transforming an organisations website into a site that excourages support and patronage to keep these types of artistic organisations alive. The challenge is to transform the existing design into a clean professional site, to promote user experience and encourage user interaction. Let the idea stage commence!</p>
           </div>
           <div class="col-xs-12 col-md-7 col-lg-7">
-            <img src="/img/rac-img.png" div class="img-responsive"alt="Riverside Art Center Homepage"/>
+            <div class="rac-original-website">
+              <img src="/img/rac-img.png" div class="img-responsive" alt="Riverside Art Center Homepage"/>
+            </div>
           </div>
         </div>
       </div>
@@ -120,11 +122,9 @@
               <p>Continuing the design in Sketch, I added my content. I found that the original logo design didn't work on a small scale. The text was illegable and the colour scheme didn't compliment the new design. Using Adobe Illustrator, I created a new logo design/gallery brand, that was simple yet bold to match the redesign.</p>
           </div>
         </div>
-        <div class="div.scoll">
-          <div class="screenscroll">
-            <img src="/img/final-design.png" div class="img-responsive" alt="final website design"/>
+          <div class="design-img">
+            <img src="/img/racfinaldesign.png" div class="img-responsive" alt="final website design"/>
           </div>
-        </div>
         <div class="logos">
           <img src="/img/logos.png" div class="img-responsive" alt="logo design"/>
         </div>
