--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="css/main.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -24,7 +25,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-12 col-lg-12">
             <h1>Jenny Core-Holt</h1>
-            <h3>Web Designer</h3>
+            <h3>UX/UI Design | Visual Design</h3>
           </div>
         </div>
         <div class="row">
@@ -60,23 +61,13 @@
 
     <!-- *************** ABOUT PAGE ************  -->
     <div id="about">
-      <div class="pic">
-        <img src="img/jennycoreholt-photo.png" alt="Jenny Core-Holt"/>
-      </div>
+      <!-- <h2><b>Collaborate. Communicate. Innovate.</b></h2> -->
+        <div class="pic">
+          <img src="img/jennycoreholt-photo.png" alt="Jenny Core-Holt"/>
+        </div>
       <div class="info">
-        <h3>About Me</h3>
-        <p>I am a British Web Designer based in Berlin (DE). I work in UX, UI and product design and I'm interested in front end development. I love drawing and practice as an artist, you can check out my creations <a href="http://www.jennycore.com/"><b>here</b></a>. I’m also an avid tea drinker.</p>
-        <ul class="flex-list list-inline">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Sass</li>
-          <li>JavaScript</li>
-          <li>Bootstrap</li>
-          <li>Sketch</li>
-          <li>Invision</li>
-          <li>Photoshop</li>
-          <li>Illustrator</li>
-        </ul>
+        <h3>Hello!</h3>
+        <p><b>I am a British Designer based in Berlin.</b></p><p>Seven years experience in the creative industry has guided and influenced my visual design process. I love to create sketches, wireframes, prototypes and code to produce user friendly products.</p>
         <ul class="social-media list-inline">
           <li class="hvr-bob"><a href="https://twitter.com/jennycoreWOOP"><img src="img/twitter.png"	alt="twitter"/></a></li>
           <li class="hvr-bob"><a href="https://www.facebook.com/jennycoreart"><img src="img/fb.png" alt="facebook"/></a></li>
@@ -86,42 +77,33 @@
         </ul>
       </div>
     </div>
-
-    <!-- *************** DIVIDER ************  -->
-    <div class="divider"></div>
     <!-- *************** PROJECTS PAGE ************  -->
     <div id="projects">
-      <div class="case-study-text">
-        <h3>Riverside Art Center Case Study</h3>
-        <p>Coming from a creative background, I thought it fitting to redesign a gallery website. This case study walks you through my step by step process, from mood boards to prototype. Now, it's time to put the kettle on and peruse through!</p>
-        <a href="/case_studies/riverside-art-center.html" class="btn project-btn btn-lg">Read More!</a>
-      </div>
-      <div class="project-image1">
-        <img src="img/case-study-ipad.png" alt="Riverside Art Center Case Study"/>
-      </div>
-      <div class="project-image2">
-        <img src="img/case-study-iphone.png" alt="Riverside Art Center Case Study"/>
+      <div class="container">
+          <div class="project-image1 hvr-grow-shadow">
+            <a href="/case_studies/riverside-art-center.html">
+              <img src="img/rac-casestudy-img.png" class="img-responsive" alt="Riverside Art Center Case Study"/>
+            </a>
+          </div>
+          <div class="project-image2 hvr-grow-shadow">
+            <a href="/saatchi_project/saatchi_project.html">
+              <img src="img/saatchi-project-img.png" class="img-responsive" alt="Saatchi Dashboard Project"/>
+            </a>
+          </div>
+          <div class="project-image3 hvr-grow-shadow">
+            <a href="/ux_sketch/ux_sketch.html">
+              <img src="img/ux-design-img.png" class="img-responsive" alt="UX Design Project"/>
+            </a>
+          </div>
+          <div class="project-image4 hvr-grow-shadow">
+            <a href="/ui/ui-main.html">
+              <img src="img/ui-design-img.png" class="img-responsive" alt="UI Design Project"/>
+            </a>
+          </div>
       </div>
     </div>
-    <!-- *************** PROJECTS PAGE ************ -->
-    <!-- <div id="projects">
-      <div class="container">
-        <div class="row">
-          <div class="">
-            <div class="case-study2-text">
-              <h3>Case Study 2</h3>
-              <p>Some sample text about this case study. Here I will talk briefly about a website I redesigned. The link will send you to the process of how I re-designed from mood boards to Sketch to a interactive prototype...</p>
-              <a href="#" class="btn project-btn btn-lg">Read More!</a>
-            </div>
-          </div>
-          <div class="project-image3">
-            <img src="img/case-study2-comp.png" alt="sample-image"/>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <!-- *************** sketchbook PAGE ************ -->
-    <div class="sketchbook">
+    <!-- <div class="sketchbook">
       <div class="case-study-text">
         <h3>Sketch Book</h3>
         <p>Browse through a collection of digital drawings, animations and interactive projects, that I am currently working on.</p>
@@ -130,9 +112,6 @@
         <a href="/diamond_pattern/diamond_pattern.html">
           <img src="/img/diamond-pattern.png" class="img-responsive" alt="diamond pattern"/>
         </a>
-        <!-- <a href="/solar_system/solar_system.html">
-          <img src="/img/animation.png" class="img-responsive" alt="solar system animation"/>
-        </a> -->
         <a href="/tea_pattern/tea_pattern.html">
           <img src="/img/tea-pattern.png" class="img-responsive" alt="tea pattern"/>
         </a>
@@ -155,15 +134,12 @@
           <img src="/img/case-studies.png" class="img-responsive" alt="digital drawing of Berlin skyline"/>
         </a>
       </div>
-    </div>
-    <!-- *************** DIVIDER ************  -->
-    <div class="divider"></div>
+    </div> -->
     <!-- *************** CONTACT ************  -->
     <div id="contact">
-      <h1>Contact</h1>
       <h2>Thanks for stopping by!</h2>
       <p>If you are interested in my designs or want to see more projects, then do not hesitate to get in touch!</p>
-      <a href="mailto:jenny@jennycore.com" class="btn btn-contact btn-lg">Contact Me</a>
+      <a href="mailto:jenny@jennycore.com" class="btn btn-contact">Contact Me</a>
     </div>
   </body>
   </html>
