--- a/ui/ui-main.html
+++ b/ui/ui-main.html
@@ -40,11 +40,14 @@
           </div>
         </div>
       </div>
-      <!-- <div class="text-wrapper"> -->
-        <div class="container-fluid">
-          <h1>UI</h1>
-          <p>Design</p>
+      <div class="container-fluid">
+        <h1>UI</h1>
+        <p>Design</p>
+        <div class="back-arrow">
+          <a href="/index.html">
+            <img src="/img/back-arrow.png" class="img-responsive" alt='back arrow'>
+          </a>
         </div>
-      <!-- </div> -->
-   </body>
+      </div>
+    </body>
   </html>
