--- a/ux_sketch/ux_sketch.html
+++ b/ux_sketch/ux_sketch.html
@@ -67,6 +67,11 @@
         <div class="text-wrapper2">
           <p>...creates a clear indication that more content can be viewed on scrolling.</p>
         </div>
+        <div class="back-arrow">
+          <a href="/index.html">
+            <img src="/img/back-arrow.png" class="img-responsive" alt='back arrow'>
+          </a>
+        </div>
       </div>
     </div>
     <!--------------------- SECTION FOUR  -------------------->
