--- a/saatchi_project/saatchi_project.html
+++ b/saatchi_project/saatchi_project.html
@@ -13,7 +13,7 @@
       </div>
       <h3>UX / UI Concept</h3>
       <div class="saatchi-logo">
-        <img src="/img/saatchiArtLogo.png" class="img-responsive" alt="Saatchi logo"/>
+        <img src="/img/SaatchiArtLogo.png" class="img-responsive" alt="Saatchi logo"/>
       </div>
       <p>As a user of Saatchi Online, I wanted to redesign the artist/collector dashboard, so the content is easier to access for the user.</p>
     </section>
