redesign Saatchi Project
Redesigned the layout & colours of Saatchi Project

--- a/saatchi_project/saatchi_project.html
+++ b/saatchi_project/saatchi_project.html
@@ -7,6 +7,7 @@
     <link href="/css/saatchi_project.css" rel="stylesheet">
   </head>
   <body>
+    <!------------------ first section ------------------>
     <section id="header">
       <div class="header-img">
         <img src="/img/saatchi-project-header-img.png" class="img-responsive" alt="Saatchi Dashboard Image"/>
@@ -17,11 +18,13 @@
       </div>
       <p>As a user of Saatchi Online, I wanted to redesign the artist/collector dashboard, so the content is easier to access for the user.</p>
     </section>
+    <!------------------ introduction ------------------>
     <section id="section1">
       <div class="container">
         <p> As it is an art site, the dashboard has been built more visually. I wanted to create a dashboard with a simple yet practical design, as well as keeping the original idea of a visual aspect.</p>
       </div>
     </section>
+    <!------------------ sketches ------------------>
     <section id="sketch">
       <div class="container">
         <div class="sketch1">
@@ -32,6 +35,13 @@
         </div>
       </div>
     </section>
+    <!------------------ title divider ------------------>
+    <div class="header1">
+      <div class="container-fluid">
+        <p>Menu Feature</p>
+      </div>
+    </div>
+    <!------------------ menu info  ------------------>
     <section id="section2">
       <div class="container">
         <div class="menu-img">
@@ -50,20 +60,48 @@
             <footer>Nick Babich, Software Engineer. <cite title="https://uxplanet.org/perfect-menu-for-mobile-apps-39b2cb5b7377#.mx6k227ve">Perfect Menu for Mobile Apps.</cite></footer>
           </blockquote>
         </div>
-        <div class="screen-shot3">
-          <img src="/img/saatchi-Dashboard-redesign-2.png" class="img-responsive" alt="sales dashboard page"/>
-        </div>
-        <div class="screen-shot4">
-          <img src="/img/saatchi-Dashboard-redesign-3.png" class="img-responsive" alt="favourites and collections page"/>
-        </div>
-        <p>I kept the navbar along the top of the page, so the user can switch easily between the front end (what the visitor can see) and the back end (the user's dashboard) of the site. This comes in useful for the user adding their favourite artworks to their favourites and collections page.</p>
       </section>
+      <!------------------ title divider ------------------>
+      <div class="header2">
+        <div class="container-fluid">
+          <p>Nav</p>
+        </div>
+      </div>
+      <!------------------ navbar info ------------------>
+      <section id="section3">
+        <div class="container">
+          <div class="screen-shot3">
+            <img src="/img/saatchi-Dashboard-redesign-2.png" class="img-responsive" alt="sales dashboard page"/>
+          </div>
+          <div class="screen-shot4">
+            <img src="/img/saatchi-Dashboard-redesign-3.png" class="img-responsive" alt="favourites and collections page"/>
+          </div>
+          <p>I kept the navbar along the top of the page, so the user can switch easily between the front end (what the visitor can see) and the back end (the user's dashboard) of the site. This comes in useful for the user adding their favourite artworks to their favourites and collections page.</p>
+        </div>
+      </section3>
+    <!------------------ title divider ------------------>
       <section id="color-palette">
         <div class="container">
-          <p>Reds, blues and yellows are the Saatchi logo/brand colours. I continued the visual brand across the dashboard to encourage user interaction with buttons, features and included the colour tones in the dashboard's new visual design.</p>
+          <h3>Colour Palette</h3>
         </div>
       </section>
-      <section id="section3">
+      <!------------------ colour palette info ------------------>
+      <div class="container">
+        <div class="color-palette-text">
+          <p>Reds, blues and yellows are the Saatchi logo/brand colours. I continued the visual brand across the dashboard to encourage user interaction with buttons, features and included the colour tones in the dashboard's new visual design.</p>
+        </div>
+        <div class="colour-img">
+          <img src="/img/colour-img.png" class="img-responsive" alt="red circle"/>
+        </div>
+      </div>
+      <!------------------ title divider ------------------>
+      <div class="header3">
+        <div class="container-fluid">
+          <h3>Findability & Useability</h3>
+        </div>
+      </div>
+      <!------------------ findability & Usability info ------------------>
+      <section id="section4">
         <div class="container">
           <div class="screen-shot5">
             <img src="/img/saatchi-Dashboard-redesign-6.png" class="img-responsive" alt="sales dashboard page"/>
@@ -76,12 +114,14 @@
         </div>
       </div>
     </section>
-    <section id="section4-banner">
+    <!------------------ title divider ------------------>
+    <section id="section5-banner">
       <div class="container">
         <h3>The New Design</h3>
       </div>
     </section>
-    <section id="section4">
+    <!------------------ The New Design ------------------>
+    <section id="section5">
       <div class="container">
         <div class="final-design">
           <img src="/img/saatchi-final-design.png" class="img-responsive" alt="Saatchi Final Design"/>
