--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel=icon href="img/variable_6_P9x_icon.ico">
 
-    <title>Jenny Core-Holt Designer</title>
+    <title>Jenny Core Visual Artist</title>
     <link rel="stylesheet" media="all" href="css/main.css"/>
     <!--[if lt IE 9]>/css/main.css
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -14,12 +15,13 @@
     <![endif]-->
   </head>
   <body>
+    <div class="wrapper">
     <!-- navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
+          <button id="hamburger-animation" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -28,7 +30,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="./allotment.html">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="./allotment.html">Gallery</a></li>
             <li><a href="./allotment.html">Contact</a></li>
           </ul>
@@ -37,80 +39,95 @@
     </nav>
     <!-- **END** navigation -->
 
+    <div class="container">
+      <div class="row">
+        <!-- text overlay area -->
+        <div class="col-sm-7 col-md-9"></div>
+        <div class="col-sm-5 col-md-3">
+          <div class="text_overlay_carousel">
+            <div class="intro_area">
+              Exploring Innovative Ways of Working in Contemporary Drawing
+            </div>
+          </div>
+        </div>
+        <!-- text overlay area -->
+      </div>
+    </div>
+
     <!-- carousel -->
-    <div class="container-fluid">
-      <div id="homepage_carousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#homepage_carousel" data-slide-to="0" class="active"></li>
-          <li data-target="#homepage_carousel" data-slide-to="1"></li>
-          <li data-target="#mhomepage_carousel" data-slide-to="2"></li>
-        </ol>
+    <div class="container">
+      <div id="homepage_carousel" class="page_load_fade_in carousel slide carousel-fade" data-ride="carousel">
 
         <!-- Wrapper for slides -->
-        <div class="carousel-fade carousel-inner">
+        <div class="carousel-inner">
           <div class="item active">
-            <img src="la.jpg" alt="Los Angeles">
+            <div class="gallery_image gallery_image_1"></div>
           </div>
 
           <div class="item">
-            <img src="chicago.jpg" alt="Chicago">
+            <div class="gallery_image gallery_image_2"></div>
           </div>
 
           <div class="item">
-            <img src="ny.jpg" alt="New York">
+            <div class="gallery_image gallery_image_3"></div>
           </div>
+
+          <div class="item">
+            <div class="gallery_image gallery_image_4"></div>
+          </div>
+
         </div>
       </div>
     </div>
     <!-- **END** carousel -->
 
-    <!-- text overlay area -->
     <div class="container">
       <div class="row">
-        <div class="text_overlay_carousel">
-
-          <div class="col-sm-4 col-md-3">
-            <h5>
-              Jenny Core’s work  is about the process rather than the end product – they are a performance, almost where what remains is a mark of an object that once existed. These works invite your imagination in.
-              <br></br>
-              <span>
-                Rebecca Gordon,<br>
-                Curator at Rise Art (2014).
-              </span>
-            </h5>
-          </div>
-
-          <div class="col-sm-4 col-md-6"></div>
-
-          <div class="col-sm-4 col-md-3">
-            <h1>
-              Exploring innovative ways of working in contemporary drawing.
-            </h1>
+        <!-- text overlay area -->
+        <div class="col-sm-4 col-md-3">
+          <div class="text_overlay_carousel">
+            <div class="quote_area">
+              <img class="img-responsive" src="/img/quote_image.png"/>
+              <h5>
+                Jenny Core’s work  is about the process rather than the end product – they are a performance, almost where what remains is a mark of an object that once existed. These works invite your imagination in.
+                <br></br>
+                <span>
+                  <p>
+                    Rebecca Gordon,<br>
+                    Curator at Rise Art (2014).
+                  </p>
+                </span>
+              </h5>
+            </div>
           </div>
         </div>
+        <!-- **END** text overlay area -->
       </div>
     </div>
-    <!-- **END** text overlay area -->
 
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <div class="copyright">
-          <span class="glyphicon glyphicon-copyright-mark"></span>  Jenny Core Visual Artist 2018
-        </div>
-        <div class="pull-right logo_area">
-          <a href="#">
-            <p>represented by</p>
-            <img class="img-responsive" src="img/rise_art_logo.png" alt="Rise Art Logo">
-          </a>
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="copyright">
+              <span class="glyphicon glyphicon-copyright-mark"></span>  Jenny Core Visual Artist, 2018
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="logo_area">
+              <a href="#">
+                <p>represented by</p>
+                <img class="img-responsive" src="img/rise_art_logo.png" alt="Rise Art Logo">
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
     <!-- **END** footer -->
 
-    <!-- <a href="./allotment.html"> -->
-
+  </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
