--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="./about.html">About</a></li>
-            <li><a href="./allotment.html">Gallery</a></li>
-            <li><a href="./allotment.html">Contact</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
+            <li><a href="./contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
