links now working on mobile

--- a/index.html
+++ b/index.html
@@ -64,23 +64,27 @@
 
           <div class="row">
 
-            <!-- email address -->
-            <p class="text-center">
-              <a href="mailto:jenny@jennycore.com" target="_top">
-                <img class="text-center email-icon" src="/img/email-icon.svg" alt="email-icon"/>
-                <span>jenny@jennycore.com</span>
-              </a>
-            </p>
-            <!-- **END** email address -->
+            <div class="bring-to-front">
 
-            <!-- social media area -->
-            <ul class="text-center social_media">
-              <li class="float"><a href="https://twitter.com/jennycoreWOOP" target="_blank"><img class="img-responsive" src="/img/twitter_socialmedia.png" alt="twitter"/></a></li>
-              <li class="float"><a href="https://www.instagram.com/jenny_core_art/" target="_blank"><img class="img-responsive" src="/img/dribbble_socialmedia.png" alt="dribbble"/></a></li>
-              <li class="float"><a href="https://www.flickr.com/photos/jennycorewoop/" target="_blank"><img class="img-responsive" src="/img/behance_socialmedia.png" alt="behance"/></a></li>
-              <li class="float"><a href="https://www.linkedin.com/in/jennycoreart/" target="_blank"><img class="img-responsive" src="/img/linkedin_socialmedia.png" alt="LinkedIn"/></a></li>
-            </ul>
-            <!-- **END** social media area -->
+              <!-- email address -->
+              <p class="text-center">
+                <a href="mailto:jenny@jennycore.com" target="_top">
+                  <img class="text-center email-icon" src="/img/email-icon.svg" alt="email-icon"/>
+                  <span>jenny@jennycore.com</span>
+                </a>
+              </p>
+              <!-- **END** email address -->
+
+              <!-- social media area -->
+              <ul class="text-center social_media">
+                <li class="float"><a href="https://twitter.com/jennycoreWOOP" target="_blank"><img class="img-responsive" src="/img/twitter_socialmedia.png" alt="twitter"/></a></li>
+                <li class="float"><a href="https://dribbble.com/jennycoreholt" target="_blank"><img class="img-responsive" src="/img/dribbble_socialmedia.png" alt="dribbble"/></a></li>
+                <li class="float"><a href="https://www.behance.net/jennycoreholt" target="_blank"><img class="img-responsive" src="/img/behance_socialmedia.png" alt="behance"/></a></li>
+                <li class="float"><a href="https://www.linkedin.com/in/jennycoreart/" target="_blank"><img class="img-responsive" src="/img/linkedin_socialmedia.png" alt="LinkedIn"/></a></li>
+              </ul>
+              <!-- **END** social media area -->
+
+            </div>
 
           </div>
 
