file clean up  and animations added

--- a/index.html
+++ b/index.html
@@ -16,81 +16,83 @@
     <title>Jenny Core-Holt Web Designer</title>
   </head>
   <body>
-    <img class="img-responsive bk_t_l opacity" src="/img/bk_t_l.png" alt="background-image"/>
-    <img class="img-responsive bk_t_r opacity" src="/img/bk_t_r.png" alt="background-image"/>
-    <img class="img-responsive bk_b_r opacity" src="/img/bk_b_r.png" alt="background-image"/>
-    <img class="img-responsive bk_b_l opacity" src="/img/bk_b_l.png" alt="background-image"/>
-    <img class="img-responsive bk_m_r opacity" src="/img/bk_m_r.png" alt="background-image"/>
-    <img class="img-responsive bk_l_m hidden-xs" src="/img/bk_t_m.png" alt="background-image"/>
-    <!-- <div class="background-image-top-left"></div>
-    <div class="background-image-bottom-left"></div>
-    <div class="background-image-top-right"></div>
-    <div class="background-image-bottom-right"></div> -->
-    <div class="container">
-      <div class="center-content-container">
-        <div class="center-content">
-          <div class="row">
-            <div class="col-xs-12">
-              <h1 class="text-center green-text">Jenny Core-Holt</h1>
-              <h3 class="text-center green-text">Frontend Designer</h3>
-              <ul class="text-center skill-list">
-                <li>UI</li>
-                <li>UX</li>
-                <li>Design Mockups</li>
-                <li>Wireframes</li>
-                <li>html</li>
-                <li>sass</li>
-                <li>css</li>
-                <li>js</li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="row">
-
-            <div class="col-md-3"></div>
-
-            <div class="col-md-6">
-              <div class="message-area">
-                <h3 class="text-center">Hello,</h3>
-                <h3 class="text-center">You found me!<br> I am currenly rebuilding my portfolio.</h3>
-                <h3 class="text-center">Come back soon!</h3>
+    <div class="background_green">
+      <img class="img-responsive bk_t_l opacity" src="/img/bk_t_l.png" alt="background-image"/>
+      <img class="img-responsive bk_t_r opacity" src="/img/bk_t_r.png" alt="background-image"/>
+      <img class="img-responsive bk_b_r opacity" src="/img/bk_b_r.png" alt="background-image"/>
+      <img class="img-responsive bk_b_l opacity" src="/img/bk_b_l.png" alt="background-image"/>
+      <img class="img-responsive bk_m_r opacity" src="/img/bk_m_r.png" alt="background-image"/>
+      <img class="img-responsive bk_l_m hidden-xs" src="/img/bk_t_m.png" alt="background-image"/>
+      <div class="container">
+        <div class="center-content-container">
+          <div class="center-content">
+            <div class="page_load_animation">
+              <div class="row">
+                <div class="col-xs-12">
+                  <h1 class="text-center green-text">Jenny Core-Holt</h1>
+                  <h3 class="text-center green-text">Frontend Designer</h3>
+                  <ul class="text-center skill-list">
+                    <li>UI</li>
+                    <li>UX</li>
+                    <li>Design Mockups</li>
+                    <li>Wireframes</li>
+                    <li>html</li>
+                    <li>sass</li>
+                    <li>css</li>
+                    <li>js</li>
+                  </ul>
+                </div>
               </div>
-            </div>
 
-            <div class="col-md-3"></div>
+              <div class="row">
 
-          </div>
+                <div class="col-md-3"></div>
 
-          <div class="row">
+                <div class="col-md-6">
+                  <div class="message-area">
+                    <h3 class="text-center">Hello,</h3>
+                    <h3 class="text-center">You found me!<br> I am currenly rebuilding my portfolio.</h3>
+                    <h3 class="text-center">Come back soon!</h3>
+                  </div>
+                </div>
 
-            <div class="bring-to-front">
+                <div class="col-md-3"></div>
 
-              <!-- email address -->
-              <p class="text-center">
-                <a href="mailto:jenny@jennycore.com" target="_top">
-                  <img class="text-center email-icon" src="/img/email-icon.svg" alt="email-icon"/>
-                  <span>jenny@jennycore.com</span>
-                </a>
-              </p>
-              <!-- **END** email address -->
+              </div>
 
-              <!-- social media area -->
-              <ul class="text-center social_media">
-                <li class="float"><a href="https://twitter.com/jennycoreWOOP" target="_blank"><img class="img-responsive" src="/img/twitter_socialmedia.png" alt="twitter"/></a></li>
-                <li class="float"><a href="https://dribbble.com/jennycoreholt" target="_blank"><img class="img-responsive" src="/img/dribbble_socialmedia.png" alt="dribbble"/></a></li>
-                <li class="float"><a href="https://www.behance.net/jennycoreholt" target="_blank"><img class="img-responsive" src="/img/behance_socialmedia.png" alt="behance"/></a></li>
-                <li class="float"><a href="https://www.linkedin.com/in/jennycoreart/" target="_blank"><img class="img-responsive" src="/img/linkedin_socialmedia.png" alt="LinkedIn"/></a></li>
-              </ul>
-              <!-- **END** social media area -->
+              <div class="row">
+
+                <div class="bring-to-front">
+
+                  <!-- email address -->
+                  <p class="text-center">
+                    <a href="mailto:jenny@jennycore.com" target="_top">
+                      <img class="text-center email-icon" src="/img/email-icon.svg" alt="email-icon"/>
+                      <span>jenny@jennycore.com</span>
+                    </a>
+                  </p>
+                  <!-- **END** email address -->
+
+                  <!-- social media area -->
+                  <ul class="text-center social_media">
+                    <li class="float"><a href="https://twitter.com/jennycoreWOOP" target="_blank"><img class="img-responsive" src="/img/twitter_socialmedia.png" alt="twitter"/></a></li>
+                    <li class="float"><a href="https://dribbble.com/jennycoreholt" target="_blank"><img class="img-responsive" src="/img/dribbble_socialmedia.png" alt="dribbble"/></a></li>
+                    <li class="float"><a href="https://www.behance.net/jennycoreholt" target="_blank"><img class="img-responsive" src="/img/behance_socialmedia.png" alt="behance"/></a></li>
+                    <li class="float"><a href="https://www.linkedin.com/in/jennycoreart/" target="_blank"><img class="img-responsive" src="/img/linkedin_socialmedia.png" alt="LinkedIn"/></a></li>
+                  </ul>
+                  <!-- **END** social media area -->
+
+                </div>
+
+              </div>
 
             </div>
 
           </div>
 
         </div>
-
       </div>
+      
     </div>
   </body>
 </html>
