content update: capitalisation in skills area

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <li>UX</li>
                     <li>Design Mockups</li>
                     <li>Wireframes</li>
-                    <li>html</li>
-                    <li>sass</li>
-                    <li>css</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Sass</li>
                     <li>js</li>
                   </ul>
                 </div>
@@ -92,7 +92,7 @@
 
         </div>
       </div>
-      
+
     </div>
   </body>
 </html>
